--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "author": "jumaelmartins",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/mongoose": "^5.11.97",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
     "eslint-config-prettier": "^8.8.0",
@@ -19,5 +22,12 @@
     "prettier": "^2.8.8",
     "sucrase": "^3.32.0",
     "typescript": "^5.1.3"
+  },
+  "dependencies": {
+    "@types/shortid": "^0.0.29",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mongoose": "^7.2.2",
+    "shortid": "^2.2.16"
   }
 }
