--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/shortid": "^0.0.29",
     "cors": "^2.8.5",
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
-    "mongoose": "^7.2.2",
+    "mongoose": "^7.2.3",
     "shortid": "^2.2.16"
   }
 }
